[package]
name = "tetris"
version = "0.1.0"
authors = ["bradboswell"]
build = "build.rs"

[dependencies]
image = "0.19"
rand = "0.5.5"
wavefront_obj = "5.1"
winit = "0.17.2"

[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx"
rev = "41e9611"

[dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx"
rev = "41e9611"

[build-dependencies]
shaderc = "0.3.11"
